Loader interface draft

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
     "files": ["src/bootstrap.php"]
   },
   "require": {
-    "chuyskywalker/rolling-curl": "*",
-    "doctrine/dbal": "2.3.*"
+    "guzzle/guzzle": "~3.8"
   }
 }
