--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,9 @@
   },
   "require": {
     "guzzle/guzzle": "~3.8"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0",
+    "mikey179/vfsStream": "~1.2"
   }
 }
