--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,7 @@ before_script:
   - mysql myapp_test < data/mysql.sql
   - sqlite3 /tmp/myapp_test.db < data/sqlite.sql
   - cp travis/tests/config.php tests/config.php
+script: phpunit --coverage-clover=coverage.clover
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
