--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "files": ["src/bootstrap.php"]
   },
   "require": {
-    "guzzle/guzzle": "~3.8"
+    "guzzle/guzzle": "~3.8",
+    "ext-mongo": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
