Extract MongoDB adapters into valera/mongo

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     "files": ["src/bootstrap.php"]
   },
   "require": {
-    "guzzle/guzzle": "~3.8",
-    "ext-mongo": "*"
+    "guzzle/guzzle": "~3.8"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
