--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
     "guzzle/guzzle": "~3.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0",
-    "mikey179/vfsStream": "~1.2"
+    "phpunit/phpunit": "~4.0"
   }
 }
