--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,24 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false"
-         bootstrap="tests/bootstrap.php"
-        >
+<phpunit bootstrap="tests/bootstrap.php">
     <testsuites>
         <testsuite name="Valera Test Suite">
-            <directory>./tests/Valera/</directory>
+            <directory>tests/Valera/Tests</directory>
         </testsuite>
     </testsuites>
-    <filter>
-        <whitelist>
-            <directory>./src</directory>
-        </whitelist>
-    </filter>
 </phpunit>
