--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     },
     "files": ["src/bootstrap.php"]
   },
+  "require": {
+    "beberlei/assert": "@stable"
+  },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
   }
