--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,4 +6,9 @@
             <directory>tests/Valera/Tests</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist>
+            <directory>src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
