Make resource responsible for conversion of relative URLs into absolute

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,10 @@
   "autoload": {
     "psr-0": {
       "Valera": "src/"
-    }
+    },
+    "classmap": [
+      "lib/"
+    ]
   },
   "require": {
     "beberlei/assert": "@stable",
