--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   },
   "require": {
     "beberlei/assert": "@stable",
-    "monolog/monolog": "~1.9"
+    "monolog/monolog": "~1.9",
+    "ulrichsg/getopt-php": "~2.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0"
