--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap="tests/bootstrap.php" strict="true">
+<phpunit bootstrap="tests/bootstrap.php" strict-coverage="true">
     <testsuites>
         <testsuite name="Valera Test Suite">
             <directory>tests/Valera/Tests</directory>
